--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeicons/primeicons.css";
+@import "primeng/resources/themes/soho-light/theme.css";
+@import "primeng/resources/primeng.min.css";
+
+html, body { height: 100%; }
+body {
+  margin: 0;
+  font-family: Lato, Helvetica, sans-serif;
+  background: #EFF3F8;
+}
